Closed
Bug 1205470
Opened 10 years ago
Closed 10 years ago
Assertion failure: !self->mInitPromise.IsEmpty(),
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla44
People
(Reporter: jya, Assigned: jya)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
|
2.72 KB,
patch
|
cpearce
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
From https://bugzilla.mozilla.org/show_bug.cgi?id=1105760#c465
PROCESS | 1863 | Assertion failure: !self->mInitPromise.IsEmpty(), at
/builds/slave/fx-team-l64-d-0000000000000000/build/src/dom/media/mediasource/MediaSourceDemuxer.cpp:66
PROCESS-CRASH | /media-source/SourceBuffer-abort-readyState.html | application
crashed [@
nsRunnableFunction<mozilla::MediaSourceDemuxer::NotifyDataArrived(uint32_t,
int64_t)::<lambda()> >::Run]
TEST-UNEXPECTED-CRASH | /media-source/SourceBuffer-abort-readyState.html |
expected OK
SSLError: [Errno 1] _ssl.c:1242: error:1409F07F:SSL
routines:SSL3_WRITE_PENDING:bad write retry
SSLError: [Errno 1] _ssl.c:1242: error:1409F07F:SSL
routines:SSL3_WRITE_PENDING:bad write retry
SSLError: [Errno 1] _ssl.c:1242: error:1409F07F:SSL
routines:SSL3_WRITE_PENDING:bad write retry
Return code: 1
We have a race accessing the init promise should shutdown occurs prior everything.
I had thought about and thought that it didn't matter. Prove njn's point I gather ; there's no such thing as a trivial race
| Assignee | ||
Updated•10 years ago
|
Keywords: assertion,
intermittent-failure
| Assignee | ||
Comment 2•10 years ago
|
||
Can also remove mInitDone member as that information is redundant with the init promise being present
Attachment #8663476 -
Flags: review?(cpearce)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jyavenard
Updated•10 years ago
|
Attachment #8663476 -
Flags: review?(cpearce) → review+
Comment 4•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
| Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8663476 [details] [diff] [review]
[MSE] Remove assertion.
Approval Request Comment
[Feature/regressing bug #]:1204757
[User impact if declined]: Assert.
[Describe test coverage new/current, TreeHerder]: in central
[Risks and why]: Low, removing assertion
[String/UUID change made/needed]: none
Attachment #8663476 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 6•10 years ago
|
||
Seems this one flew under the radar... Any particular reason for the request to still be pending?
thank you
Flags: needinfo?(sledru)
Comment 7•10 years ago
|
||
Comment on attachment 8663476 [details] [diff] [review]
[MSE] Remove assertion.
Because I am managing 42 and not 43. Therefor, I am watching only the beta uplift requests.
Anyway, taking it to fix the assert.
Flags: needinfo?(sledru)
Attachment #8663476 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 8•10 years ago
|
||
Ah ok . I see.. thanks
Comment 9•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•