Bug 1205470 - [MSE] Remove assertion. r=cpearce, a=sylvestre

Can also remove mInitDone member as that information is redundant with the init promise being present