dom/media/mediasource/MediaSourceDemuxer.cpp
@@ -27,7 +27,6 @@ using media::TimeIntervals;
 MediaSourceDemuxer::MediaSourceDemuxer()
   : mTaskQueue(new TaskQueue(GetMediaThreadPool(MediaThreadType::PLAYBACK),
                              /* aSupportsTailDispatch = */ true))
-  , mInitDone(false)
   , mMonitor("MediaSourceDemuxer")
 {
   MOZ_ASSERT(NS_IsMainThread());
@@ -46,7 +45,6 @@ MediaSourceDemuxer::AttemptInit()
   MOZ_ASSERT(OnTaskQueue());
 
   if (ScanSourceBuffersForContent()) {
-    mInitDone = true;
     return InitPromise::CreateAndResolve(NS_OK, __func__);
   }
 
@@ -60,12 +58,10 @@ void MediaSourceDemuxer::NotifyDataArrived(uint32_t aLength, int64_t aOffset)
   nsRefPtr<MediaSourceDemuxer> self = this;
   nsCOMPtr<nsIRunnable> task =
     NS_NewRunnableFunction([self] () {
-      if (self->mInitDone) {
+      if (self->mInitPromise.IsEmpty()) {
         return;
       }
-      MOZ_ASSERT(!self->mInitPromise.IsEmpty());
       if (self->ScanSourceBuffersForContent()) {
-        self->mInitDone = true;
         self->mInitPromise.ResolveIfExists(NS_OK, __func__);
       }
     });
